--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.2.9",
+    "@supabase/supabase-js": "^2.88.0",
     "@tailwindcss/vite": "^4.1.18",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
